--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
 body{
-    background:#ccc;
+    background: #ccc;
     #app{
-        font-size: 100px
+        .jsx{
+            color:blue;
+        }
     }
 }
