--- a/src/page/product/index/index.scss
+++ b/src/page/product/index/index.scss
@@ -1,3 +1,10 @@
 .opear {
     margin-right: 10px;
 }
+
+.search-wrap {
+    margin-bottom: 20px;
+    .form-group {
+        margin-right: 10px;
+    }
+}
